--- a/fstyle/static/css/base.css
+++ b/fstyle/static/css/base.css
@@ -25,20 +25,20 @@ body {
     margin: 10px auto 5px;
     clear: both;
     position: relative;
-    height: 78px;
+    height: 100px;
 }
 
 #sitetitle {
     position: absolute;
-    top: 5px;
+    top: 2px;
     left: 0px;
     font-size: 300%;
 }
 
 #siteslogan {
     position: absolute;
-    top: 25px;
-    right: 0px;
+    top: 37px;
+    left: 0px;
     font-family: Georgia;
     font-size: 150%;
     font-style: italic;
@@ -46,10 +46,10 @@ body {
 
 #sitemenu {
     position: absolute;
-    top: 45px;
+    top: 70px;
     left: 0px;
-    font-family: Ubuntu;
-    font-size: 150%;
+    font-family: Verdana;
+    font-size: 130%;
 }
 
 #sitemenu ul {
@@ -60,7 +60,13 @@ body {
 
 #sitemenu ul li {
     display: inline;
-    margin-right: 10px;
+    margin-right: 4px;
+}
+
+#sitemenu ul li a, #sitemenu ul li a:visited {
+    background: #bbb;
+    padding: 2px 6px;
+    border-radius: 4px;
 }
 
 
