add home flatpage

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
 <ul>
 <li><a href="{% url home %}">Главная</a></li>
 <li><a href="{% url price_index %}">Цены</a>
+<li><a href="/about/">О проекте</a>
 </ul>
 {% endblock %}
 
