--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -1,9 +1,9 @@
-{% extends "base.html" %}
+{% extends "fprice/base_price.html" %}
 {% load markup %}
 
 {% block title %}{{ flatpage.title }} | {{ block.super }}{% endblock %}
 
-{% block breadcrumbs %} - Страница - {{ flatpage.title }}{% endblock %}
+{% block breadcrumbs %}<a href="{% url home %}">Главная</a> - {{ flatpage.title }}{% endblock %}
 
 {% block contentclass %}flatpage{% endblock %}
 
