--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,7 @@
 {% extends 'theme.html' %}
 
+{% load fmenu_tags %}
+
 {% block title %}Цены говорят{% endblock %}
 
 {% block usermenu %}
@@ -20,9 +22,7 @@
 
 {% block navigation %}
 <ul>
-<li><a href="{% url home %}">Главная</a></li>
-<li><a href="{% url price_index %}">Цены</a>
-<li><a href="/about/">О проекте</a>
+{% show_menu 'mainmenu' %}
 </ul>
 {% endblock %}
 
