--- a/fmenu/templates/menu.html
+++ b/fmenu/templates/menu.html
@@ -1,3 +1,3 @@
 {% for item in menu %}
-<li><a href="{{ item.url }}">{{ item.title }}</a></li>
+{% if item.active %}<li><a href="{{ item.url }}">{{ item.title }}</a></li>{% endif %}
 {% endfor %}
