--- a/templates/base.html
+++ b/templates/base.html
@@ -32,4 +32,4 @@
 
 {% endblock %}
 
-{% block footer %}<i>Ссылки и копирайт</i>{% endblock %}
+{% block footer %}<i>(c) SkyFalk Studio, 2012</i>{% endblock %}
