--- a/fstyle/static/css/theme.css
+++ b/fstyle/static/css/theme.css
@@ -107,6 +107,7 @@ body {
     padding: 10px;
     margin-top: 4px;
     background: #bbb;
+    text-align: center;
 }
 
 /* =========================== DEFAULT ========================== */
