--- a/fstyle/templates/theme.html
+++ b/fstyle/templates/theme.html
@@ -9,6 +9,9 @@
 <meta name="description" content="{% block description %}{% endblock %}" />
 <meta name="keywords" content="{% block keywords %}{% endblock %}" />
 
+<link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico" type="image/x-icon" />
+<link rel="icon" href="{{ STATIC_URL }}favicon.ico" type="image/x-icon" />
+
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/theme.css" media="all" />     
 <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" media="all" />     
 
