--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
 
 {% endblock %}
 
-{% block footer %}<i>(c) SkyFalk Studio, 2012</i>{% endblock %}
+{% block footer %}<i>(c) 0xh Studio, 2012</i>{% endblock %}
 
 {% block extra_body %}
 
