--- a/fstyle/templates/theme.html
+++ b/fstyle/templates/theme.html
@@ -26,6 +26,10 @@
 {% block usermenu %}
 {% endblock %}
 </div>
+<div id="search">
+{% block search %}
+{% endblock %}
+</div>
 
 <div id="sitetitle">{% block sitetitle %}{% endblock %}</div>
 <div id="siteslogan">{% block siteslogan %}{% endblock %}</div>
